--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,34 +15,34 @@
         android:theme="@style/Theme.Lap1"
         tools:targetApi="31">
         <activity
-            android:name=".ForgotPassActivity"
+            android:name="com.ph32395.lap1.ForgotPassActivity"
             android:exported="false" />
         <activity
-            android:name=".LoginOtpActivity"
+            android:name="com.ph32395.lap1.LoginOtpActivity"
             android:exported="false" />
         <activity
-            android:name=".ChoiceLoginActivity"
+            android:name="com.ph32395.lap1.ChoiceLoginActivity"
             android:exported="false" />
         <activity
-            android:name=".HomeActivity"
+            android:name="com.ph32395.lap1.HomeActivity"
             android:exported="true" >
 
+
+        </activity>
+        <activity
+            android:name="com.ph32395.lap1.SignupActivity"
+            android:exported="false" />
+        <activity
+            android:name="com.ph32395.lap1.LoginActivity"
+            android:exported="false" />
+        <activity
+            android:name="com.ph32395.lap1.MainActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity
-            android:name=".SignupActivity"
-            android:exported="false" />
-        <activity
-            android:name=".LoginActivity"
-            android:exported="false" />
-        <activity
-            android:name=".MainActivity"
-            android:exported="true">
-
         </activity>
     </application>
 
