--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,32 +15,32 @@
         android:theme="@style/Theme.Lap1"
         tools:targetApi="31">
         <activity
-            android:name="com.ph32395.lap1.ForgotPassActivity"
+            android:name="com.duyle.lap1.ForgotPassActivity"
             android:exported="false" />
         <activity
-            android:name="com.ph32395.lap1.LoginOtpActivity"
+            android:name="com.duyle.lap1.LoginOtpActivity"
             android:exported="false" />
         <activity
-            android:name="com.ph32395.lap1.ChoiceLoginActivity"
+            android:name="com.duyle.lap1.ChoiceLoginActivity"
             android:exported="false" />
         <activity
-            android:name="com.ph32395.lap1.HomeActivity"
+            android:name="com.duyle.lap1.HomeActivity"
             android:exported="true" >
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
         <activity
-            android:name="com.ph32395.lap1.SignupActivity"
+            android:name="com.duyle.lap1.SignupActivity"
             android:exported="false" />
         <activity
-            android:name="com.ph32395.lap1.LoginActivity"
+            android:name="com.duyle.lap1.LoginActivity"
             android:exported="false" />
         <activity
-            android:name="com.ph32395.lap1.MainActivity"
+            android:name="com.duyle.lap1.MainActivity"
             android:exported="true">
 
         </activity>
